fix LayoutDayPickerInput (z-index)

--- a/projectforge-webapp/src/components/design/input/base/Base.module.scss
+++ b/projectforge-webapp/src/components/design/input/base/Base.module.scss
@@ -9,7 +9,6 @@ label.label {
 
   span.title {
     position: absolute;
-    z-index: 1;
     top: 0;
     left: 3px;
     color: #7a7a7a;
